<resources>
    <string name="app_name">HMS_App</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <string name="incorrect_login">Login details are incorrect.</string>
    <string name="try_again">Try again.</string>

    <string name="incorrect_email">Emails do not match.</string>
    <string name="incorrect_password">Passwords do not match.</string>
    <string name="blank">There are blank fields.</string>

    <string name="login">Login</string>
    <string name="create_account">Create Account</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="camera_settings">Camera Settings</string>
    <string name="title_activity_altitude">Altitude</string>
    <string name="title_activity_temperature">Temperature</string>
    <string name="title_activity_atmospheric_pressure">Atmospheric Pressure</string>
    <string name="title_activity_device_moved">Device Movement</string>
    <string name="title_activity_motion_dection">Motion Detection</string>
    <string name="title_activity_device_settings">Device Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_power_socket">PowerSocketActiviy</string>
    <string name="title_activity_power_sockets">Power Sockets</string>
    <string name="title_activity_camera">Camera Feed</string>
    <string name="title_activity_sensor_settings">SensorSettingsActivity</string>
    <string name="sensors_activated">Sensors Activated</string>
    <string name="sensors_deactivated">Sensors Deactivated</string>
    <string name="add_power_socket">Add Power Socket</string>
    <string name="socket_name_colon">Socket Name:</string>
    <string name="socket_number_colon">Socket Number:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_device">Add Device</string>
    <string name="device_name_colon">Device Name:</string>
    <string name="device_key_colon">Device Key:</string>
    <string name="logout_message">You must log out to proceed</string>
    <string name="logout">Logout</string>
    <string name="alarm_triggers">Alarm Triggers</string>
    <string name="device_feature">Device Feature</string>
    <string name="limit">Limit</string>
    <string name="alarm_enabled">Alarm Enabled</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="apply">Apply</string>
    <string name="view_triggers">View Triggers</string>
</resources>
